--- a/rater/PaginaInicial/index.html
+++ b/rater/PaginaInicial/index.html
@@ -20,7 +20,7 @@
 	<nav class="menu">
 		<ul>
 			<li><a href="../download/download.html"><img class="downIco" src="../Menu/downIco.png"></a></li>
-			<li><a class="button" href="../quemsomos/sobrenos.html">QUEM SOMOS?</a></li>
+			<li><a class="button qs" href="../quemsomos/sobrenos.html">QUEM SOMOS?</a></li>
 			<li><a class="button" href="../sobresoftware/software.html">SOFTWARE</a></li>
 			<li><a class="button" href="#">INICIO</a></li>
 
@@ -42,6 +42,7 @@
 			<div class="botoes">
 				<form method="get" action="../download/download.html">
 					<button type="submit" class="btnDownload">Download</button>
+
 				</form>
 
 				<form method="get" action="../sobresoftware/software.html">
