--- a/rater/QuemSomos/SobreNos.html
+++ b/rater/QuemSomos/SobreNos.html
@@ -20,9 +20,9 @@
 	<nav class="menu">
 		<ul>
 			<li><a href="../download/download.html"><img class="downIco" src="../Menu/downIco.png"></a></li>
-			<li><a class="button" href="../quemsomos/sobrenos.html">QUEM SOMOS?</a></li>
+			<li><a class="button qs" href="../quemsomos/sobrenos.html">QUEM SOMOS?</a></li>
 			<li><a class="button" href="../sobresoftware/software.html">SOFTWARE</a></li>
-			<li><a class="button" href="../paginainicial/index.html">INICIO</a></li> 
+			<li><a class="button" href="../paginainicial/index.html">INICIO</a></li>
 		</ul>
 	</nav>
 
@@ -39,7 +39,7 @@
 			<br>Historia, Missão,
 			<br>Visão e Valores.</h1>
 		</div>
-		<img src="imgsPagina/ratericon.png" class="icone">
+		<img src="imgsPagina/raterEmpresa.png" class="icone">
 	</section>
 
 	<script>
