--- a/rater/SobreSoftware/Software.html
+++ b/rater/SobreSoftware/Software.html
@@ -26,7 +26,7 @@
 	<nav class="menu">
 		<ul>
 			<li><a href="../download/download.html"><img class="downIco" src="../Menu/downIco.png"></a></li>
-			<li><a class="button" href="../quemsomos/sobrenos.html">QUEM SOMOS?</a></li>
+			<li><a class="button qs" href="../quemsomos/sobrenos.html">QUEM SOMOS?</a></li>
 			<li><a class="button" href="../sobresoftware/software.html">SOFTWARE</a></li>
 			<li><a class="button" href="../paginainicial/index.html">INICIO</a></li>
 
