Input de upload de imagem colocado, mudança(temporaria) de background da pagina Quem Somos e mais alguns detalhes de responsividade arrumados

--- a/rater/Download/Download.html
+++ b/rater/Download/Download.html
@@ -43,6 +43,8 @@
 				<input class="txt" type="password" name="senha"><br>
 				<label class="lbl" >Confirmar senha*</label>
 				<input class="txt" type="password" name="senhaC"><br>
+				<label class="lbl" >Foto da empresa:</label>
+				<input class="upImg" type="file" name="imgEmpresa"><br>
 				<br>
 				<br>
 				<input type="submit" value="Cadastrar" class="btnCadastrar">
