--- a/rater/SobreSoftware/Software.html
+++ b/rater/SobreSoftware/Software.html
@@ -44,9 +44,9 @@
 	</section>
 
 		<section class="Galeria">
-			<h1 class="titulo1">Interfaces</h1>
+			<p class="titulo1 titulo">Interfaces</p>
 			</br>
-			<p class="texto1">Veja algumas capturas de tela das interfaces do sistema.</p>
+			<p class="texto vactli">Veja algumas capturas de tela das interfaces do sistema.</p>
 			</br>
 			</br>
 			</br>
