campo imagem atualizado no php

--- a/rater/Download/Download.html
+++ b/rater/Download/Download.html
@@ -32,7 +32,7 @@
 				<h2 class="t2">Cadastre-se agora para experimentar</h2>
 			</div>
 			
-			<form class="formulario" method="post" action="cadastro.php">
+			<form class="formulario" enctype="multipart/form-data" method="post" action="cadastro.php">
 				<label class="lbl" >Nome da Empresa*</label>
 				<input class="txt" type="text" name="nomeEmpresa"><br>
 				<label class="lbl" >Email da Empresa*</label>
