arrumadinha baica no site

--- a/rater/QuemSomos/SobreNos.html
+++ b/rater/QuemSomos/SobreNos.html
@@ -220,19 +220,20 @@
 			<p class="topicos2"><img src="..\rodape\whatsapp2.png" class="contatoImg">11 94002-8922</p>
 			<p class="topicos2"><img src="..\rodape\gps2.png" class="contatoImg">R. Virgínia Ferni, 400 - Itaquera, São Paulo - SP</p>
 			<p class="topicos2"><img src="..\rodape\gmail2.png" class="contatoImg">ratertcc@gmail.com</p>
+			
+		</div>
+
+		<div class="faleConoscoBox">
+			<p class="topicos1">Siga nos</p>
 			<div class="rowRedesSociais">
 				<img src="..\rodape\facebook.png" class="logosRedeSociais">
 				<img src="..\rodape\twitter.png" class="logosRedeSociais">
 				<img src="..\rodape\linkedin.png" class="logosRedeSociais">
 			</div>
+
+
 		</div>
 
-		<div class="faleConoscoBox">
-			<p class="topicos1">Fale Conosco</p>
-			<input type="text" name="email" placeholder="Seu Email*" class="emailTxt">
-			<br>
-			<input type="text" name="msg" placeholder="Mensagem" class="msgTxt">
-		</div>
 	</section>
 
 
