--- a/rater/SobreSoftware/Software.html
+++ b/rater/SobreSoftware/Software.html
@@ -44,12 +44,14 @@
 	</section>
 
 		<section class="Galeria">
-			<p class="titulo1 titulo">Interfaces</p>
-			</br>
-			<p class="texto vactli">Veja algumas capturas de tela das interfaces do sistema.</p>
-			</br>
-			</br>
-			</br>
+			<div class="pao">
+				<p class="titulo ">Interfaces</p>
+				</br>
+				<p class="texto">Veja algumas capturas de tela das interfaces do sistema.</p>
+				</br>
+				</br>
+				</br>
+			</div>
 
 			<div class="imagembox">
 				<img src="imagensTela/1.png" class="imagens" id="imgGaleria">
@@ -106,33 +108,34 @@
 
 
 		
-	<section class="rodape">
-	<div class="mapasitebox">
-		<p class="topicos1">Mapa Do Site</p>
-		<a href="#" class="jooj"><p class="topicos2ms">Inicio</p></a>
-		<a href="#" class="jooj"><p class="topicos2ms">Software</p></a>
-		<a href="#" class="jooj"><p class="topicos2ms">Quem Somos?</p></a>
-		<a href="#" class="jooj"><p class="topicos2ms">Download</p></a>
-	</div>
-
-	<div class="contatobox">
-		<p class="topicos1">Contato</p>
-		<p class="topicos2"><img src="..\rodape\whatsapp2.png" class="contatoImg">11 94002-8922</p>
-		<p class="topicos2"><img src="..\rodape\gps2.png" class="contatoImg">R. Virgínia Ferni, 400 - Itaquera, São Paulo - SP</p>
-		<p class="topicos2"><img src="..\rodape\gmail2.png" class="contatoImg">ratertcc@gmail.com</p>
-		<div class="rowRedesSociais">
-			<img src="..\rodape\facebook.png" class="logosRedeSociais">
-			<img src="..\rodape\twitter.png" class="logosRedeSociais">
-			<img src="..\rodape\linkedin.png" class="logosRedeSociais">
+		<section class="rodape">
+		<div class="mapasitebox">
+			<p class="topicos1">Mapa Do Site</p>
+			<a href="#" class="jooj"><p class="topicos2ms">Inicio</p></a>
+			<a href="#" class="jooj"><p class="topicos2ms">Software</p></a>
+			<a href="#" class="jooj"><p class="topicos2ms">Quem Somos?</p></a>
+			<a href="#" class="jooj"><p class="topicos2ms">Download</p></a>
 		</div>
-	</div>
 
-	<div class="faleConoscoBox">
-		<p class="topicos1">Fale Conosco</p>
-		<input type="text" name="email" placeholder="Seu Email*" class="emailTxt">
-		<br>
-		<input type="text" name="msg" placeholder="Mensagem" class="msgTxt">
-	</div>
+		<div class="contatobox">
+			<p class="topicos1">Contato</p>
+			<p class="topicos2"><img src="..\rodape\whatsapp2.png" class="contatoImg">11 94002-8922</p>
+			<p class="topicos2"><img src="..\rodape\gps2.png" class="contatoImg">R. Virgínia Ferni, 400 - Itaquera, São Paulo - SP</p>
+			<p class="topicos2"><img src="..\rodape\gmail2.png" class="contatoImg">ratertcc@gmail.com</p>
+			
+		</div>
+
+		<div class="faleConoscoBox">
+			<p class="topicos1">Siga nos</p>
+			<div class="rowRedesSociais">
+				<img src="..\rodape\facebook.png" class="logosRedeSociais">
+				<img src="..\rodape\twitter.png" class="logosRedeSociais">
+				<img src="..\rodape\linkedin.png" class="logosRedeSociais">
+			</div>
+
+
+		</div>
+
 	</section>
 
 	
