--- a/rater/Download/Download.html
+++ b/rater/Download/Download.html
@@ -43,9 +43,7 @@
 				<input class="txt" type="password" name="senha"><br>
 				<label class="lbl" >Confirmar senha*</label>
 				<input class="txt" type="password" name="senhaC"><br>
-				<label class="lbl" >Foto da empresa:</label>
-				<input class="upImg" type="file" name="imgEmpresa"><br>
-				<br>
+			
 				<br>
 				<input type="submit" value="Cadastrar" class="btnCadastrar">
 			</form>
@@ -209,7 +207,7 @@
 
 
 
-	<section class="rodape">
+		<section class="rodape">
 		<div class="mapasitebox">
 			<p class="topicos1">Mapa Do Site</p>
 			<a href="#" class="jooj"><p class="topicos2ms">Inicio</p></a>
@@ -223,19 +221,20 @@
 			<p class="topicos2"><img src="..\rodape\whatsapp2.png" class="contatoImg">11 94002-8922</p>
 			<p class="topicos2"><img src="..\rodape\gps2.png" class="contatoImg">R. Virgínia Ferni, 400 - Itaquera, São Paulo - SP</p>
 			<p class="topicos2"><img src="..\rodape\gmail2.png" class="contatoImg">ratertcc@gmail.com</p>
+			
+		</div>
+
+		<div class="faleConoscoBox">
+			<p class="topicos1">Siga nos</p>
 			<div class="rowRedesSociais">
 				<img src="..\rodape\facebook.png" class="logosRedeSociais">
 				<img src="..\rodape\twitter.png" class="logosRedeSociais">
 				<img src="..\rodape\linkedin.png" class="logosRedeSociais">
 			</div>
+
+
 		</div>
 
-		<div class="faleConoscoBox">
-			<p class="topicos1">Fale Conosco</p>
-			<input type="text" name="email" placeholder="Seu Email*" class="emailTxt">
-			<br>
-			<input type="text" name="msg" placeholder="Mensagem" class="msgTxt">
-		</div>
 	</section>
 
 
