comentarios dos usuarios

--- a/rater/Download/Download.html
+++ b/rater/Download/Download.html
@@ -145,21 +145,22 @@
 		<h1 class="OpUsuTitulo">Opiniões dos Usuários</h1>
 
 		<div class="blocoOpinioes">
-			<img src="imgUsuarios/billgates.jpg" class="imgUsuario">
-			<h1 class="nomeUsuarios">Bill Gates</h1>
-			<p class="comentarios">"Nullam elit ipsum, feugiat sed sapien quis, auctor pulvinar massa. Morbi scelerisque massa id cursus tempus. Sed sollicitudin ligula et neque cursus, at porttitor nulla tristique. "</p>
+			<img src="imgUsuarios/Marcelo.jpg" class="imgUsuario">
+			<h1 class="nomeUsuarios">Marcelo</h1>
+			<p class="comentarios">"De acordo com o cenário nacional, qualquer ferramenta que auxilie o candidato, a melhorar seu desempenho em uma entrevista de emprego é válido"</p>
 		</div>
 
 		<div class="blocoOpinioes">
-			<img src="imgUsuarios/stevejobs.jpg" class="imgUsuario">
-			<h1 class="nomeUsuarios">Steve Jobs</h1>
-			<p class="comentarios">" Quisque vel consectetur lectus, sed sagittis nulla. Integer tempus varius quam, vel porttitor arcu lacinia ut. Suspendisse et augue nunc. Suspendisse vehicula nec nibh ut scelerisque. "</p>
+			<img src="imgUsuarios/Shirley.jpg" class="imgUsuario">
+			<h1 class="nomeUsuarios">Shirley</h1>
+			<p class="comentarios">"O sistema é importante pq ele padroniza, e mantem um histórico, quando fazemos uma entrevista é na mão, perdemos detalhes, com a computação não perdemos esses detalhes"</p>
 		</div>
 
 		<div class="blocoOpinioes">
-			<img src="imgUsuarios/michaeljordan.jpg" class="imgUsuario">
-			<h1 class="nomeUsuarios">Michael Jordan</h1>
-			<p class="comentarios">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum scelerisque ante. Donec malesuada et nisl ut molestie. Integer eu eros ipsum. Suspendisse diam enim, bibendum vitae massa ac, placerat tincidunt nisi. Cras facilisis auctor ipsum, et gravida neque aliquam eget. "</p>
+			<img src="imgUsuarios/Alessandra.jpg" class="imgUsuario">
+			<h1 class="nomeUsuarios">Alessandra Cardoso</h1>
+			<p class="comentarios">"Meus critérios são considerados a todo momento, isso define os melhores funcionários, com o software
+			O retorno aos candidatos vai melhorar a relação com a empresa"</p>
 		</div>
 
 
