Ajustes na pagina de Download

--- a/rater/Download/Download.html
+++ b/rater/Download/Download.html
@@ -145,20 +145,20 @@
 		<h1 class="OpUsuTitulo">Opiniões dos Usuários</h1>
 
 		<div class="blocoOpinioes">
-			<img src="imgUsuarios/Marcelo.jpg" class="imgUsuario">
-			<h1 class="nomeUsuarios">Marcelo</h1>
+			<img src="imgUsuarios/Marcelo.png" class="imgUsuario">
+			<h1 class="nomeUsuarios">Marcelo Barbosa - Coordenador e Professor</h1>
 			<p class="comentarios">"De acordo com o cenário nacional, qualquer ferramenta que auxilie o candidato, a melhorar seu desempenho em uma entrevista de emprego é válido"</p>
 		</div>
 
 		<div class="blocoOpinioes">
 			<img src="imgUsuarios/Shirley.jpg" class="imgUsuario">
-			<h1 class="nomeUsuarios">Shirley</h1>
-			<p class="comentarios">"O sistema é importante pq ele padroniza, e mantem um histórico, quando fazemos uma entrevista é na mão, perdemos detalhes, com a computação não perdemos esses detalhes"</p>
+			<h1 class="nomeUsuarios">Shirley Oliveira - Gerente Contábil</h1>
+			<p class="comentarios">"O sistema é importante porque ele padroniza, e mantem um histórico, quando fazemos uma entrevista é na mão, perdemos detalhes, com a computação não perdemos esses detalhes"</p>
 		</div>
 
 		<div class="blocoOpinioes">
-			<img src="imgUsuarios/Alessandra.jpg" class="imgUsuario">
-			<h1 class="nomeUsuarios">Alessandra Cardoso</h1>
+			<img src="imgUsuarios/Alessandra.png" class="imgUsuario">
+			<h1 class="nomeUsuarios">Alessandra Cardoso -  CEO da HG Eletrônicos</h1>
 			<p class="comentarios">"Meus critérios são considerados a todo momento, isso define os melhores funcionários, com o software
 			O retorno aos candidatos vai melhorar a relação com a empresa"</p>
 		</div>
