Galeria Atualizada, consertado alguns bugs de responsividade

--- a/rater/SobreSoftware/Software.html
+++ b/rater/SobreSoftware/Software.html
@@ -47,7 +47,7 @@
 			<div class="pao">
 				<p class="titulo ">Interfaces</p>
 				</br>
-				<p class="texto">Veja algumas capturas de tela das interfaces do sistema.</p>
+				<p class="texto texto3">Veja algumas capturas de tela das interfaces do sistema.</p>
 				</br>
 				</br>
 				</br>
